I upadted my code

--- a/index.html
+++ b/index.html
@@ -45,11 +45,12 @@
             <div id="route-page" class="page hidden">
                 <div class="header-sub">
                     <h2>SELECT ROUTE</h2>
+                    <h5><em>Your Previous Selected Route</em></h5>
                     <p id="from-display">From: Loading...</p>
                     <p id="to-display">To: Loading...</p>
                 </div>
                 <div id="route-buttons-container" class="scrollable">
-                    </div>
+                </div>
                 <button id="back-from-route" class="btn btn-secondary">BACK</button>
             </div>
 
@@ -103,6 +104,7 @@
                     <img src="QRcode.jpg" alt="GCash QR Code" class="gcash-qr-image">
                 </div>
                 <button id="proceed-qrcode-btn" class="btn">PRINT TICKET</button>
+                <button id="back-from-qrcode" class="btn btn-secondary">BACK</button>
                 </div>
 
             <div id="conductor-page" class="page hidden">
@@ -121,7 +123,7 @@
                     <span class="info-label">CASH:</span> ₱<span id="cash-payments">0.00</span>
                 </div>
                 <button id="print-report-btn" class="btn">PRINT REPORT</button>
-                <button id="clear-data-btn" class="btn btn-danger">CLEAR DATA</button> <button id="back-from-conductor" class="btn btn-secondary">BACK</button>
+                <button id="clear-data-btn" class="btn btn-danger">CLEAR DATA</button>
                 <button id="back-from-conductor" class="btn btn-secondary">BACK</button>
             </div>
         </div>
